--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Rahman Tavakoli",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^7.3.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
