--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.4.5",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
