--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Rahman Tavakoli",
   "license": "MIT",
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
@@ -25,6 +26,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "winston": "^3.10.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
