--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.4.5",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "winston": "^3.10.0",
